--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   </head>
   <body>
 <div class="top">
-  <img class="top_cloud" src="CSS - My Site Images\CSS - My Site Images\cloud.png" alt="">
+  <img class="top_cloud" src="cloud.png" alt="">
   <h1 class="forh1">I'm Gaurav</h1>
   <h2 class="forp">  a web designer</h2>
-  <img class="bottom-cloud"src="CSS - My Site Images\CSS - My Site Images\cloud.png" alt="">
-  <img class = "mountain" src="CSS - My Site Images\CSS - My Site Images\mountain.png" alt="">
+  <img class="bottom-cloud"src="cloud.png" alt="">
+  <img class = "mountain" src="mountain.png" alt="">
 </div>
 
 
 <<div class="middle-container">
   <div class="profile">
-    <img src="D:\Udemy - The Complete 2020 Web Development Bootcamp\My web development\HTML Personal - website\images\Gaurav.png" alt="">
+    <img src="Gaurav.png" alt="">
     <h2>Hello.</h2>
     <p>I am a web developer and currently learning new web frameworks. I just Love Coding.</p>
   </div>
