--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 
 
-<<div class="middle-container">
+<div class="middle-container">
   <div class="profile">
     <img src="Gaurav.png" alt="">
     <h2>Hello.</h2>
